--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Microinvest project for MMT-FMI",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "preslav",
@@ -59,3 +60,4 @@
   }
   
 }
+
